--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,64 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+}
+
+body {
+  display: flex;
+  flex-direction: row;
+  gap: 0;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: hsl(218, 23%, 16%);
+  padding: 15px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  background: hsl(217, 19%, 24%);
+  border-radius: 10px;
+  width: 100%;
+  max-width: 450px;
+  padding: 2.5rem 1.5rem;
+  text-align: center;
+}
+.card__title {
+  color: hsl(150, 100%, 66%);
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+  font-size: 0.75rem;
+}
+.card__advice {
+  color: hsl(193, 38%, 86%);
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+.card__dice {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin-bottom: -23%;
+  padding: 1rem;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  background-color: hsl(150, 100%, 66%);
+  border: 1px solid #323a49;
+  cursor: pointer;
+}
+.card__dice:hover {
+  box-shadow: 0 0 20px 10px rgba(82, 255, 168, 0.7);
+  border: 1px solid rgba(50, 58, 73, 0.1);
+}
+.card__dice:active {
+  transform: scale(0.95);
+}
+.card__dice:focus {
+  outline: none !important;
+  cursor: default;
+}/*# sourceMappingURL=style.css.map */
