--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -30,3 +30,79 @@ $fs-base: 28px;
 
 $ff-primary: 'Manrope', sans-serif;
 $fw-regular: 800;
+
+// Mixins
+
+@mixin flex($direction, $gap) {
+  display: flex;
+  flex-direction: $direction;
+  gap: $gap;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: $ff-primary;
+  font-weight: $fw-regular;
+}
+
+body {
+  @include flex(row, 0);
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: $dark-blue;
+
+  padding: 15px;
+}
+
+.card {
+  @include flex(column, 2rem);
+  background: $neutral-dark-grayish-blue;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 450px;
+  padding: 2.5rem 1.5rem;
+  text-align: center;
+
+  &__title {
+    color: $primary-neon-green;
+    text-transform: uppercase;
+    letter-spacing: 0.25rem;
+    font-size: 0.75rem;
+  }
+
+  &__advice {
+    color: $primary-light-cyan;
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  &__dice {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin-bottom: -23%;
+    padding: 1rem;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    background-color: $primary-neon-green;
+    border: 1px solid rgba($neutral-dark-grayish-blue, 1);
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0 0 20px 10px rgba($primary-neon-green, 0.7);
+      border: 1px solid rgba($neutral-dark-grayish-blue, 0.1);
+    }
+
+    &:active {
+      transform: scale(0.95);
+    }
+
+    &:focus {
+      outline: none !important;
+      cursor: default;
+    }
+  }
+}
