--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -60,7 +60,7 @@ body {
   background: $neutral-dark-grayish-blue;
   border-radius: 10px;
   width: 100%;
-  max-width: 450px;
+  max-width: 500px;
   padding: 2.5rem 1.5rem;
   text-align: center;
 
@@ -103,6 +103,14 @@ body {
     &:focus {
       outline: none !important;
       cursor: default;
+    }
+  }
+  @media screen and (min-width: 500px) {
+    &__advice {
+      font-size: 1.75rem;
+    }
+    &__dice {
+      margin-bottom: -15.5%;
     }
   }
 }
